--- a/assets/style.css
+++ b/assets/style.css
@@ -81,7 +81,7 @@ nav {
   padding: 1rem 2rem;
   position: fixed;
   width: 100%;
-  height: 20%;
+  height: 30px;
   top: 0;
   z-index: 1000;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
