--- a/assets/style.css
+++ b/assets/style.css
@@ -81,7 +81,7 @@ nav {
   padding: 1rem 2rem;
   position: fixed;
   width: 100%;
-  height: 80px;
+  height: 90px;
   top: 0;
   z-index: 1000;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
@@ -196,6 +196,7 @@ nav a:hover {
   min-height: 100vh;
   display: flex;
   align-items: center;
+  margin-top: 10px;
   position: relative;
   overflow: hidden;
 }
